[package]
name = "spatial"
version = "0.1.0"
authors = ["Max <frappyd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
piston_window = "0.98.0"

[[example]]
name = "demo"
path = "examples/quadtree/main.rs"
