[package]
name = "spatial"
version = "0.1.0"
authors = ["Max <frappyd@gmail.com>"]
edition = "2018"
description = "Data structures for spatial indexing"
repository = "https://github.com/theZiggurat/spatial-rs.git"
homepage = "https://github.com/theZiggurat/spatial-rs"
license = "MIT/Apache-2.0"
readme = "Readme.md"
keywords = ["spatial","quadtree"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "demo"
path = "examples/quadtree/main.rs"

[dev-dependencies]
piston_window = "0.98.0"
